# JaldiBharo

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  schema.py  services.py  utils.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/tests/: test_jwt.py  test_redis.py
frontend/: .env.production
frontend/src/: App.jsx
