[project]
name = "jaldibharo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.135.2",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "redis>=5.0.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]
